# claude-adlc-framework

./: .env.template  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CLAUDE_FOR_DUMMIES.md  CLEANUP-AND-SUBMODULES-SUMMARY.md  CONTRIBUTING.md  FORK_MAINTENANCE.md  FUTURE-IMPROVEMENTS.md  GUEST_MODE.md  GUEST_QUICKSTART.md  IMPLEMENTATION_PLAN.md  LICENSE  PR-DESCRIPTION.md  PR18-PROGRESSIVE-DISCLOSURE-CHANGES.md  PR_SUMMARY.md  README.md  REMOTE_MONITORING.md  RESUME_POINT_2025-10-05_MCP_ARCHITECTURE.md  SECURITY.md  SESSION_COMPLETE_2025-10-05.md  SETUP.md  SHOWCASE.md  WEEK1_DAY1-2_COMPLETE.md  claude-business-justification.md  dbt-issues-without-prs.md  dbt-mcp-capabilities-research.md  graniterock-dbt-issues-analysis.md  setup.sh
.claude/: ROLE_BASED_MIGRATION_GUIDE.md  mcp.json  settings.local.json
.cleanup-backup-20251024-221833/: CLAUDE.md  README.md  aws-docs-deployment-pattern.md  data-engineer-role.md  github-repo-context-resolution.md  project-completion-knowledge-extraction.md
.github/: CLAUDE_WORKFLOW_GUIDE.md  SETUP_CLAUDE_WORKFLOWS.md  WORKFLOW_STATUS.md  pull_request_template.md
commands/: build.md  capture.md  complete.md
config/: CLAUDE.md  data-constitution.md  dbt-mcp-setup.md  mcp-base.json  repositories.json  repositories.json.example  snowflake_mcp_config.yaml  snowflake_tools_config.yaml
docs/: README-MCP-SPECIALIST-RESEARCH.md  README.md  RESEARCH_INDEX.md  anthropic-context-engineering-analysis.md  completion-decision-guide.md  git-submodules-workflow.md  index-mcp-specialist-research.md  mcp-integration-quick-reference.md  setup.md  (+11 more)
(+600 files in other folders)
